fixed  overlapping in the ui

--- a/css/home/css/login.css
+++ b/css/home/css/login.css
@@ -3,87 +3,98 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html,body{
-background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
-background-size: cover;
-background-repeat: no-repeat;
-height: 100%;
-font-family: 'Numans', sans-serif;
+    background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+    font-family: 'Numans', sans-serif;
+}
+
+.hero {
+    background-image: url('../../../images/banner/04.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 600px;
 }
 
 .container{
-height: 100%;
-align-content: center;
+    height: 100%;
 }
 
 .card{
-height: 370px;
-margin-top: auto;
-margin-bottom: auto;
-width: 400px;
-background-color: rgba(0,0,0,0.5) !important;
+    height: 500px;
+    margin-top: auto;
+    margin-bottom: auto;
+    /* width: 600px; */
+    background-color: rgba(0,0,0,0.5) !important;
+    position: relative; /* Added */
+    align-items: center;
+}
+
+.myforms {
+    width: 400px;
 }
 
 .social_icon span{
-font-size: 60px;
-margin-left: 10px;
-color: #FFC312;
+    font-size: 60px;
+    margin-left: 10px;
+    color: #FFC312;
 }
 
 .social_icon span:hover{
-color: white;
-cursor: pointer;
+    color: white;
+    cursor: pointer;
 }
 
 .card-header h3{
-color: white;
+    color: white;
 }
 
 .social_icon{
-position: absolute;
-right: 20px;
-top: -45px;
+    position: absolute;
+    right: 20px;
+    top: -45px;
 }
 
 .input-group-prepend span{
-width: 50px;
-background-color: #FFC312;
-color: black;
-border:0 !important;
+    width: 50px;
+    background-color: #FFC312;
+    color: black;
+    border:0 !important;
 }
 
 input:focus{
-outline: 0 0 0 0  !important;
-box-shadow: 0 0 0 0 !important;
-
+    outline: 0 0 0 0  !important;
+    box-shadow: 0 0 0 0 !important;
 }
 
 .remember{
-color: white;
+    color: white;
 }
 
-.remember input
-{
-width: 20px;
-height: 20px;
-margin-left: 15px;
-margin-right: 5px;
+.remember input{
+    width: 20px;
+    height: 20px;
+    margin-left: 15px;
+    margin-right: 5px;
 }
 
 .login_btn{
-color: black;
-background-color: #FFC312;
-width: 100px;
+    color: black;
+    background-color: #FFC312;
+    width: 100px;
 }
 
 .login_btn:hover{
-color: black;
-background-color: white;
+    color: black;
+    background-color: white;
 }
 
 .links{
-color: white;
+    color: white;
 }
 
 .links a{
-margin-left: 4px;
+    margin-left: 4px;
 }
